Blackpurl/src/objects/Return_VO_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Cost__c</fullName>
        <label>Inventory Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <formula>Item__c +&quot; - &quot; +   Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Return VO Line Items</relationshipLabel>
        <relationshipName>Return_VO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Qty__c</fullName>
        <label>Return Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_VO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return VO Header</label>
        <referenceTo>Return_VO_Header__c</referenceTo>
        <relationshipLabel>Return VO Line Items</relationshipLabel>
        <relationshipName>Return_VO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Return VO Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RVOLI-{00000000}</displayFormat>
        <label>Return VO Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return VO Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>